Add method to save data into cassandra